--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@tabler/icons-react": "^3.11.0",
     "@tanstack/react-query": "^5.51.15",
+    "animate.css": "^4.1.1",
     "antd": "^5.20.0",
     "aws-sdk": "^2.1533.0",
     "axios": "^1.7.2",
