--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-three/drei": "^9.108.3",
     "@react-three/fiber": "^8.16.8",
     "@reduxjs/toolkit": "^2.2.7",
@@ -43,13 +46,17 @@
     "aws-sdk": "^2.1533.0",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "canvas-confetti": "^1.9.3",
+    "chart.js": "^4.4.4",
+    "chroma-js": "^3.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "countries-list": "^3.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-autoplay": "^8.1.7",
     "embla-carousel-react": "^8.1.7",
-    "framer-motion": "^11.3.2",
+    "framer-motion": "^11.3.30",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.408.0",
@@ -59,13 +66,20 @@
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.14",
     "openai": "^3.3.0",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^3.11.174",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-confetti": "^6.1.0",
+    "react-d3-cloud": "^1.0.6",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.52.1",
+    "react-hook-form": "^7.53.0",
+    "react-intersection-observer": "^9.13.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
+    "react-select": "^5.8.0",
     "recharts": "^2.12.7",
     "simplex-noise": "^4.0.2",
     "sonner": "^1.5.0",
@@ -74,16 +88,19 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.166.1",
     "three-globe": "^2.31.1",
+    "uuid": "^10.0.0",
     "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
