--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "embla-carousel-react": "^8.1.7",
     "framer-motion": "^11.3.30",
     "handlebars": "^4.7.8",
+    "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.408.0",
     "moment": "^2.30.1",
@@ -95,6 +96,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/canvas-confetti": "^1.6.4",
+    "@types/html-to-text": "^9.0.4",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
